# algebra-crypto-project

./: .gitignore  CMakeLists.txt  Doxyfile  MainPage.doc  README.md  messages.py
.github/workflows/: cmake.yml
client/: CMakeLists.txt
client/assets/PNG_Files/: assets.qrc
client/assets/SVG_Files/: assets.qrc
client/include/: BabelWindow.hpp  ClickableLabel.hpp  ClientConnection.hpp  ContactList.hpp  MessageItem.hpp  MessageObject.hpp  NetworkVoice.hpp  TabElem.hpp  TabManager.hpp  UserItem.hpp  UserManager.hpp  UserObject.hpp  UserPage.hpp  UserWidget.hpp
client/src/: BabelWindow.cpp  ClickableLabel.cpp  ClientConnection.cpp  ContactList.cpp  MessageItem.cpp  MessageObject.cpp  NetworkVoice.cpp  TabElem.cpp  TabManager.cpp  UserItem.cpp  UserManager.cpp  UserObject.cpp  UserPage.cpp  UserWidget.cpp  main.cpp
client/templates/: ClientConnection.hpp
client/ui/: mainwindow.ui
common/: CMakeLists.txt
common/include/: AMessage.hpp  Error.hpp  Log.hpp  Message.hpp  Net.hpp  User.hpp
common/include/audio/: IAudio.hpp  ICodec.hpp  Opus.hpp  PortAudio.hpp
common/include/commands/: CallCommand.hpp  HangUpCommand.hpp  IdentifyCommand.hpp  MessageCommand.hpp  UpdateCommand.hpp  UsersCommand.hpp
common/include/events/: CallEvent.hpp  ErrorEvent.hpp  HangUpEvent.hpp  (+3 more)
common/src/: Error.cpp  Log.cpp  Message.cpp  User.cpp
server/: CMakeLists.txt
server/include/: Instance.hpp  Proxy.hpp  Room.hpp  Server.hpp  Session.hpp  asio.hpp
server/src/: Instance.cpp  Proxy.cpp  Room.cpp  Server.cpp  Session.cpp  main.cpp
server/templates/: Instance.hpp
(+14 files in other folders)
